# oqpi

./: .gitignore  CMakeLists.txt  README.md
include/: oqpi.hpp
include/oqpi/: concurrent_queue.hpp  concurrentqueue.h  empty_layer.hpp  error_handling.hpp  parallel_algorithms.hpp  platform.hpp  scheduling.hpp  scheduling_helpers.hpp  synchronization.hpp  threads.hpp
include/oqpi/parallel_algorithms/: atomic_partitioner.hpp  base_partitioner.hpp  parallel_for.hpp  simple_partitioner.hpp
include/oqpi/scheduling/: context_container.hpp  default_contexts.hpp  dispatcher.hpp  group_context.hpp  parallel_group.hpp  scheduler.hpp  sequence_group.hpp  task.hpp  task_base.hpp  task_context.hpp  task_group.hpp  task_group_base.hpp  task_handle.hpp  task_notifier.hpp  task_result.hpp  task_scheduling.hpp  task_type.hpp  worker.hpp  worker_base.hpp  worker_context.hpp
include/oqpi/synchronization/: event.hpp  mutex.hpp  semaphore.hpp  sync.hpp  sync_common.hpp
include/oqpi/synchronization/interface/: interface_event.hpp  interface_mutex.hpp  interface_semaphore.hpp
include/oqpi/synchronization/posix/: posix_event.hpp  posix_mutex.hpp  posix_semaphore.hpp  posix_semaphore_wrapper.hpp  posix_sync.hpp
include/oqpi/synchronization/win/: win_event.hpp  win_mutex.hpp  win_semaphore.hpp  win_sync.hpp
include/oqpi/threading/: interface_thread.hpp  posix_thread.hpp  this_thread.hpp  thread.hpp  thread_attributes.hpp  win_thread.hpp
include/oqpi/threads/: interface_thread.hpp  this_thread.hpp  thread.hpp  thread_attributes.hpp  thread_interface.hpp  win_thread.hpp
test/: CMakeLists.txt  catch_amalgamated.cpp  cqueue.hpp  event_tests.hpp  mutex_tests.hpp  oqpi_task_flow.html  oqpi_tests.cpp  parallel_algorithms_tests.hpp  scheduling_tests.hpp  semaphore_tests.hpp  sync_tests.hpp  synchronization_tests.hpp  threading_tests.hpp  timer_contexts.hpp
tests/: catch_amalgamated.cpp  mutex_tests.hpp  scheduling_tests.hpp  semaphore_tests.hpp  test_utils.hpp  threading_tests.hpp  timer_contexts.hpp
